# proof-of-existence

./: Cargo.toml
pallets/template/src/: lib.rs
